Fixing scrollbar not going all the way to the left on bottom

--- a/Client/style/gameRoom.css
+++ b/Client/style/gameRoom.css
@@ -17,21 +17,29 @@ body {
     bottom:0;
     width:100%;
     height:20%;
-    max-height:200px;
+    max-height:130px;
     background-color:rgba(0, 0, 0, 0.253);
 
     display: flex;
-    align-items: center;
-    justify-content: center;
     overflow-x:auto;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+}
+
+#card-container .uno-card:first-child {
+    margin-left: auto;
+}
+
+#card-container .uno-card:last-child {
+    margin-right: auto;
 }
 
 #player-container {
     /* Container for other players */
     position:absolute;
     left:0;
-    top:min(20%, 200px);
-    bottom:min(20%, 200px);
+    top:min(20%, 130px);
+    bottom:min(20%, 130px);
     width:20%;
     max-width:200px;
     background-color:rgba(75, 75, 75, 0.5);
@@ -70,7 +78,7 @@ body {
     top:0;
     width:100%;
     height:20%;
-    max-height:200px;
+    max-height:130px;
     background-color:rgba(0, 0, 0, 0.253);
 
     display: flex;
